--- a/client/src/Components/BasicDetails/BasicDetails.css
+++ b/client/src/Components/BasicDetails/BasicDetails.css
@@ -4,14 +4,16 @@
   border: 2px solid gray;
   width: fit-content;
   padding: 10px;
-  margin: auto;
+  /* margin: auto; */
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 10px;
   color: wheat;
-
+justify-content: center;
+align-items: center;
 }
 .basicdetails-container input{
+  width: 170px;
   background-color: rgb(79, 67, 67);
   border: none;
   height: 30px;
@@ -35,9 +37,11 @@
   border-radius: 5px ;
   padding: 5px;
   color: white;
+  width: 170px;
 }
 
 .basic-details-container {
+  width: 100%;
   padding: 10px;
   border: 2px solid gray;
   border-radius: 5px;
