--- a/client/src/Components/ExperienceDetails/ExperienceDetails.css
+++ b/client/src/Components/ExperienceDetails/ExperienceDetails.css
@@ -1,14 +1,13 @@
-.education-details-containers{
-    /* background-color: antiquewhite; */
-    margin: auto;
-    width: 100%;
+.experience-details-containers{
+    width: fit-content;
     display:flex;
     flex-direction: column;
     border: 2px solid gray;
     border-radius: 5px;
     padding: 10px;
 }
-.education1-container ,.education2-container{
+.experience1-container,
+.experience2-container{
     padding: 10px;
     display: flex;
     gap: 20px;
