--- a/client/src/Components/ExperienceDetails/ExperienceDetails.css
+++ b/client/src/Components/ExperienceDetails/ExperienceDetails.css
@@ -2,14 +2,14 @@
     width: fit-content;
     display:flex;
     flex-direction: column;
-    border: 2px solid gray;
     border-radius: 5px;
-    padding: 10px;
+    border: 2px solid gray;
+    gap: 5px;
+    padding:10px;
 }
 .experience1-container,
 .experience2-container{
-    padding: 10px;
+    /* padding: 10px; */
     display: flex;
-    gap: 20px;
-    justify-content: space-evenly;
+    gap: 25px;
 }
