--- a/client/src/pages/Profile/Profile.css
+++ b/client/src/pages/Profile/Profile.css
@@ -1,15 +1,15 @@
 .seeker-profile {
   display: flex;
-  /* background-color: goldenrod; */
+  background-color: #202430;
+  color: wheat;
+
 }
+
 .profile-body {
-  /* background-color: aqua; */
   display: flex;
   flex-direction: column;
   height: fit-content;
   width: 100%;
-  /* align-items: center; */
-  /* gap: 25px; */
 }
 
 .page-header {
@@ -57,7 +57,6 @@
   overflow-y: auto;
 }
 .profile-cover {
-  /* background-color: brown; */
   width: 100%;
   height: 350px;
   border: 1px solid gray;
@@ -76,7 +75,6 @@
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  /* background-color: red; */
   justify-content: center;
   display: flex;
   align-items: center;
@@ -92,7 +90,6 @@
   padding: 10px;
   display: flex;
 flex-direction: column;
-  /* background-color: brown; */
   width: 100%;
   height: 300px;
   border: 1px solid gray;
@@ -104,7 +101,6 @@ flex-direction: column;
 }
 .experience {
   padding: 10px;
-  /* background-color: brown; */
   width: 100%;
 display: flex;
 gap: 30px;
@@ -125,7 +121,6 @@ gap: 30px;
   display: flex;
   align-items: center;
   gap: 30px;
-  /* background-color: brown; */
   width: 100%;
 
   height: 300px;
@@ -134,9 +129,7 @@ gap: 30px;
 
 .additional-info {
   width: 30%;
-  /* border: 2px solid gray; */
   text-align: center;
-  /* background-color: beige; */
   margin: 20px;
 }
 .social-links{
@@ -167,9 +160,5 @@ gap: 30px;
   display: flex;
   align-items: center;
   justify-content: space-around;
-  /* flex-direction: column; */
-  /* background-color: #4f4b4b; */
   height:370px;
-/* text-align: center; */
-/* justify-content: center; */
 }
