Browse companies and my applications

--- a/client/src/Components/UserCredentiials/UserCredentials.css
+++ b/client/src/Components/UserCredentiials/UserCredentials.css
@@ -1,3 +1,59 @@
-.Usercredential-container{
-    background-color: aqua;
+.credential-container{
+    display: flex;
+    gap: 20px;
+    padding: 10px;
+    margin:10px;
+    border: 2px solid gray;
+    border-radius: 5px;
+    color: wheat;
+    justify-content: space-between;
+}
+.update-container{
+display: flex;
+flex-direction: column;
+gap: 20px;
+    padding: 10px;
+    width:50%;
+    height: fit-content;
+}
+.credential-container form{
+    border: 2px solid gray;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    width:100%;
+    padding: 10px;
+
+}
+.credential-container input{
+    width: 170px;
+    background-color: rgb(79, 67, 67);
+    border: none;
+    height: 30px;
+    border-radius: 5px ;
+    padding: 5px;
+    color: wheat;
+
+}
+.credential-container button{
+    font-weight: 500;
+    padding: 5px;
+    border: none;
+    border-radius: 5px;
+    background-color: rgb(41, 70, 232);
+    align-self: flex-end;
+    color: rgb(235, 235, 235);
+}
+.termCondition{
+    width: 50%;
+}
+.accountDelete{
+    border: 2px solid gray;
+    border-radius: 5px;
+    padding: 10px;
+}
+.accountDelete button{
+    display: flex;
+    flex-direction: column;
+    background-color: brown;
 }
