jobProvider dashboard,findCandidates,post jobs

--- a/client/src/Components/JobByCategory/JobByCategories.css
+++ b/client/src/Components/JobByCategory/JobByCategories.css
@@ -23,7 +23,7 @@
   gap: 10px;
   font-weight: 400;
   font-size: xx-large;
-  color: aliceblue;
+  color:wheat;
 }
 .heading-container h2 {
   color: rgb(176, 128, 234);
