--- a/client/src/Components/JobPostingBanner/JobPostingBanner.css
+++ b/client/src/Components/JobPostingBanner/JobPostingBanner.css
@@ -1,6 +1,6 @@
 .JobPostingBanner-container {
   background-color: #4640de;
-  margin: auto;
+  margin:  30px auto;
   width: 80%;
   text-align: center;
   color: aliceblue;
