--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -1,8 +1,9 @@
 /* Footer Container */
 .footer {
-    background-color: #333; /* Change the background color as needed */
-    color: #fff; /* Text color */
-    padding: 50px 0; /* Adjust the padding as needed */
+  
+    background-color: #333; 
+    color: #fff; 
+    padding: 50px 0;
   }
   
   /* Footer Content */
