--- a/client/src/Components/UserCredentiials/UserCredentials.css
+++ b/client/src/Components/UserCredentiials/UserCredentials.css
@@ -46,6 +46,7 @@ gap: 20px;
 }
 .termCondition{
     width: 50%;
+    max-height: 80vh;
 }
 .accountDelete{
     border: 2px solid gray;
@@ -53,7 +54,6 @@ gap: 20px;
     padding: 10px;
 }
 .accountDelete button{
-    display: flex;
-    flex-direction: column;
-    background-color: brown;
+    position: relative;
+  background-color: brown;
 }
