--- a/client/src/Components/BasicDetails/BasicDetails.css
+++ b/client/src/Components/BasicDetails/BasicDetails.css
@@ -39,7 +39,7 @@
 
 .basic-details-container {
   width: 100%;
-  padding: 10px;
+  padding: 8px;
   border: 2px solid gray;
   border-radius: 5px;
   display:flex;
@@ -55,7 +55,8 @@ justify-content: space-evenly;
 .main-profile-container{
   margin: 10px;
 display: flex;
-height: 90%;
+/* background-color: aliceblue; */
+max-height: 80vh;
 }
 .skill-resume-container{
   display: flex;
