--- a/client/src/Components/PostJob/PostJob.css
+++ b/client/src/Components/PostJob/PostJob.css
@@ -1,30 +1,25 @@
 
  .post-job-container{
-    display: flex;
-    flex-direction: column;
+    width: fit-content;
     /* background-color: #6c7b6d; */
-    align-items: center;
-    padding: 20px;
  }
   
  .post-job-form {
     border: 2px solid gray;
     padding: 10px;
-    /* background-color: aqua; */
     display: flex;
     flex-wrap: wrap; 
-    /* Allow items to wrap to the next line */
     border-radius: 5px;
     border: 2px solid gray;
-    width: 70%;
+    width: 100%;
   }
 
  .post-job-form label {
     color:wheat;
     display: flex;
     flex-direction: column;
-    width: 40%; /* Each label takes up half of the row */
-    box-sizing: border-box; /* Include padding and border in the width */
+    width: 40%; 
+    box-sizing: border-box; 
   }
  .post-job-form input,select,textarea{
     /* width: 250px; */
