--- a/client/src/Components/UserCredentiials/UserCredentials.css
+++ b/client/src/Components/UserCredentiials/UserCredentials.css
@@ -57,3 +57,4 @@ gap: 20px;
     position: relative;
   background-color: brown;
 }
+/*  "start": "concurrently \"npm run server\" \"npm run start-client\"", */
