--- a/client/src/pages/BrowseCompanies/BrowseCompanies.css
+++ b/client/src/pages/BrowseCompanies/BrowseCompanies.css
@@ -6,18 +6,22 @@
     display: flex;
     flex-direction: column;
     background-color: #202430;
+    max-height: 100vh;
 
 }
     .browse-companies-container{
         color: wheat;
         display: flex;
         justify-content: space-evenly;
+        max-height: 90vh;
+            /* background-color: red; */
+
     }
     .company-list{
         scrollbar-width: none;
         border-radius: 5px ;
         overflow: auto;
-        height: 90%;
+        /* height: 90%; */
          border: 2px solid gray;
          padding: 10px;
          margin: 10px;
@@ -25,6 +29,8 @@
         flex-direction: column;
         width: 90%;
         gap: 10px;
+        max-height: 90vh;
+
     }
    .company-card{
     background-color: #3b3f4b;
@@ -35,6 +41,8 @@
    }
    .company-info{
     width: 100%;
+    height:fit-content;
+    /* background-color: red; */
 
    }
    .company-description{
@@ -49,4 +57,28 @@
    }
    .job-provider-container{
     color: wheat;
+   }
+   .BopeningJobs{
+    border: 2px solid gray;
+    border-radius: 5px;
+    /* background-color: red; */
+    scrollbar-width: none;
+    height: 63vh;
+    overflow: scroll;
+   }
+   .Bjob-posted-container{
+    /* background-color: rgb(41, 96, 145); */
+   }
+   .Bjob-posted{
+    /* background-color: aquamarine; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+   }
+   .Bjob-item{
+    border-radius: 5px;
+    border: 2px solid gray;
+    background-color: #202430;
+    margin: 5px;
    }
