--- a/client/src/pages/Application/Application.css
+++ b/client/src/pages/Application/Application.css
@@ -72,3 +72,29 @@ color: wheat;
   border-radius: 5px;
   background-color: rgb(35, 70, 243);
 }
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(96, 77, 77, 0.5); /* Semi-transparent black overlay */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999; /* Ensure the overlay is above other content */
+}
+
+.popup-content {
+  background-color: #202430;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Drop shadow effect */
+}
+.popup-content button{
+  border: none;
+  color: wheat;
+  padding: 5px;
+  border-radius: 5px;
+  background-color: rgb(35, 70, 243);
+}
