--- a/client/src/pages/Profile/Profile.css
+++ b/client/src/pages/Profile/Profile.css
@@ -50,7 +50,7 @@
   display: flex;
   flex-direction: column;
   padding: 20px;
-  /* width: 70%; */
+  width: 100%;
   align-items: center;
   gap: 30px;
   max-height: 90vh;
