--- a/client/src/pages/Login/Login.css
+++ b/client/src/pages/Login/Login.css
@@ -53,7 +53,7 @@ form{
   align-self: center;
   text-decoration: underline;
 }
-.login-container h5{
+.login-container span{
   color: #0056b3;
   cursor: pointer;
 }
