--- a/client/src/Components/SideBar/Sidebar.css
+++ b/client/src/Components/SideBar/Sidebar.css
@@ -1,6 +1,6 @@
 .sidebar {
-  width:390px;
-  height: 100vh;
+  width:350px;
+  min-height: 100vh;
   background-color:#37374d;
   padding: 20px;
   border-right: 1px solid #ccc;
@@ -18,7 +18,7 @@
 
 .sidebar li {
   font-size: larger;
-  margin: 30px;
+  margin-bottom: 30px;
   cursor: pointer;
 }
 
@@ -29,21 +29,22 @@
   text-decoration: none;
   font-size: large;
   font-weight: 400;
-  transition: ease-in-out;
 }
 
 .navLinks:hover {
+  transition:0.9ms;
+
   color: rgb(255, 255, 255); 
   font-weight: 500;
 }
 
 .navLinks.active {
-  font-weight: 500;
+  font-weight: 400;
 border-radius: 5px;
   display: flex;
   align-items: center;
   background-color:rgb(79, 78, 80);
   color: rgb(255, 255, 255);
   padding: 5px;
-  width: 100%;
+  width: 230px;
 }
