--- a/client/src/pages/FindJobs/FindJobs.css
+++ b/client/src/pages/FindJobs/FindJobs.css
@@ -126,11 +126,22 @@ label {
   box-shadow: 2px 2px 2px 2px solid rgb(234, 237, 234);
 }
 .img-div img{
-
+  
+  max-width: 90px;
+  max-height: 90px;
+  border-radius: 50px;
+  background-color: #ffffff;
+}
+.img-div {
+  color: #202430;
+  display: flex; /* Use flexbox */
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
   width: 90px;
   height: 90px;
   border-radius: 50px;
-  background-color: #ffffff;
+  background-color: #6d5e5e;
+
 }
 .apply button {
   margin-bottom: 10px;
@@ -156,22 +167,31 @@ label {
 }
 
 .popup {
+  width: 40%;
   color: wheat;
-  font-size: small;
-  height:fit-content;
+  max-height:90%;
+  overflow: scroll;
+  scrollbar-width: none;
   background-color: rgb(86, 77, 77);
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5); /* Box shadow for the pop-up */
   z-index: 1000; /* Ensure the pop-up is above the background */
 }
+.popup-item{
+  display: flex;
 
-.popup h2 {
-  margin-top: 0;
+}
+p1{
+  width: 40%;
+  font-size: large;
+  color: wheat;
+  align-items: center;
 }
 
-.popup p {
-  margin-bottom: 10px;
+.popup p{
+  width: 100%;
+  /* background-color: red; */
 }
 
 .popup button {
