--- a/client/src/pages/JobProvider pages/CompanyProfile/CompanyProfile.css
+++ b/client/src/pages/JobProvider pages/CompanyProfile/CompanyProfile.css
@@ -15,7 +15,7 @@
   color: black;
   padding: 2px;
   border-radius: 5px;
-  width: 25px;
+  width: fit-content;
   align-self:center;
   margin-top: 5px;
   }
