--- a/client/src/Components/Navbar/Navbar.css
+++ b/client/src/Components/Navbar/Navbar.css
@@ -4,10 +4,13 @@
   padding: 0px 20px;
   height: 60px;
   color: #fff;
+  display: flex;
+  /* justify-content: space-between; */
 }
 
 .left {
   /* background-color: #5633f3; */
+  width: fit-content;
   height: 100%;
   display: flex;
   align-items: center;
@@ -16,14 +19,16 @@
 
 /* Logo */
 .logo {
+  background-color: greenyellow;
+  border-radius: 5px;
+  padding: 0px 2px;
   cursor: pointer;
   text-decoration: none;
   display: flex; /* Flex layout for logo */
   align-items: center; /* Align items vertically in the center */
 }
 .logo img {
-  width: 300px;
-  height: 60px;
+  width: 50px;
 }
 
 .logo h1 {
@@ -33,15 +38,14 @@
 
 /* Menu */
 .menu {
-  display: flex; /* Flex layout for menu items */
-  margin-left: 50px; /* Space between logo and menu */
+  display: flex;
+  margin-left: 50px;
   font-size: 20px;
   gap: 30px;
 }
 
 .Link {
   color: rgb(255, 255, 255);
-
   text-decoration: none;
 }
 .menu li {
@@ -56,6 +60,7 @@
 }
 
 .right {
+  /* background-color: aqua; */
   /* margin: 10px; */
   height: 100%;
   display: flex;
@@ -77,7 +82,6 @@
   width: 150px;
   height: 50px;
   border: none;
-  /* border-radius: 50px; */
   background-color: #5969fa;
   color: #fff;
   cursor: pointer;
@@ -91,7 +95,6 @@
 .dropdown-content {
   margin-top: 20px;
   background-color: #147b84;
-  /* border-radius: 10px; */
   border-radius: 5%20%5%20%;
 
   padding: 10px 10px;
