--- a/client/src/pages/JobProvider pages/CompanyProfile/CompanyProfile.css
+++ b/client/src/pages/JobProvider pages/CompanyProfile/CompanyProfile.css
@@ -3,12 +3,9 @@
     
 }
 .profile-image img {
-    max-width: 100%; /* Ensure the image doesn't exceed the container width */
-    max-height: 100%; /* Ensure the image doesn't exceed the container height */
-    width: auto; /* Maintain the aspect ratio of the image */
-    height: auto; /* Maintain the aspect ratio of the image */
+    width: 100%; 
+    height: 100%; 
     display: block; /* Ensure the image behaves as a block element */
-    margin: auto; /* Center the image horizontally */
   }
   .bgtext i,.About-me i{
   background-color: white;
